# notamproj

./: .gitignore  README.md  __version__.py  changelog.md  checkchrome.py  chromeversions.json  clean_uiless.py  dealwithchrome.py  getnewchrome.py  libs.txt  main.py  notam_util.py  notamplotter.py  notamui.py  pyproject.toml  requirements.txt  setup.py  test.html  test.txt  tester.py  tracetest.py  wip_add_axiscoords.py  wip_cleanup_test.py  wip_uiless.py
.github/workflows/: test.yml
.notamproj/: pyvenv.cfg
deprecated/: backtraces.ipynb  backtraces.py  create_traces_plot.py  test.py  testroutes.py
files/: 20230325.csv  20230330.csv  README.md
output/: 20230325.html  20230330.html  README.md
wip/: README.md  wip_add_scrolllegend.py
