[project]
name = "notamproj"
version = "0.1.5"
description = "notamp plotter project"
authors = [
    {name = "JelmerKorten"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.0,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "selenium (>=4.33.0,<5.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "customtkinter (>=5.2.2,<6.0.0)",
    "arrow (>=1.3.0,<2.0.0)",
    "plotly (>=6.1.2,<7.0.0)",
    "shapely (>=2.1.1,<3.0.0)",
    "pyproj (>=3.7.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
